--- a/home.html
+++ b/home.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Webhook Sender</title>
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Discord Webhook Sender">
+    <meta property="og:description" content="Easily send messages to your Discord channel using webhooks!">
+    <meta property="og:image" content="https://picsart.teamhydra.dev/picsart-ee32181c-82f0-49fd-b2dd-0990d98f8f3d.png"> <!-- Replace with a link to your image -->
+    <meta property="og:url" content="https://ilyass590.github.io/webhooker/">
+
     <style>
         body {
             display: flex;
