--- a/home.html
+++ b/home.html
@@ -138,6 +138,8 @@
             }
             resultMessage.style.display = 'block';
         }
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3122865525444776"
+     crossorigin="anonymous"></script>
     </script>
 </body>
 </html>
