--- a/home.html
+++ b/home.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Webhook Sender with Webhook Tracking</title>
+    <title>Discord Webhook Sender</title>
 
     <!-- Add a favicon -->
-    <link rel="icon" href="https://seeklogo.com/vector-logo/428961/webhook" type="image/x-icon">
+    
 
     <style>
         body {
