--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Webhook Sender Pro</title>
+    <title>Discord Webhook Sender</title>
     <style>
         body {
             display: flex;
@@ -14,7 +14,6 @@
             background: linear-gradient(135deg, #282c34, #4a90e2);
             color: white;
             font-family: 'Arial', sans-serif;
-            overflow: hidden;
         }
         .container {
             text-align: center;
@@ -26,11 +25,6 @@
             animation: fadeIn 1s;
             max-width: 600px;
             width: 90%;
-        }
-        .top-icon {
-            width: 100px;
-            height: auto;
-            margin-bottom: 20px;
         }
         input, textarea, button, select {
             padding: 12px;
@@ -55,10 +49,11 @@
         .message-input {
             height: 100px;
         }
-        .embed-section, .schedule-section, .preview-section {
+        .embed-section, .schedule-section, .message-section {
             margin-top: 20px;
             border-top: 2px solid #fff;
             padding-top: 20px;
+            display: none; /* Hidden by default */
         }
         .discord-link {
             color: #61dafb;
@@ -67,27 +62,23 @@
         .discord-link:hover {
             color: #21a1f1;
         }
-        .history-section, .statistics-section {
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Advanced Discord Webhook Sender</h1>
+        <h1>Discord Webhook Sender</h1>
 
-        <!-- Webhook Management -->
-        <select id="webhookSelect"></select>
+        <!-- Webhook Input and Save -->
         <input type="text" id="webhookUrl" placeholder="Enter your Discord webhook URL" required>
         <button onclick="saveWebhook()">Save Webhook</button>
-        <button onclick="deleteWebhook()">Delete Webhook</button>
 
-        <!-- Message Section -->
-        <textarea class="message-input" id="message" placeholder="Enter your message"></textarea>
-        <button onclick="sendMessage()">Send Message</button>
+        <!-- Hidden sections that appear after saving the webhook -->
+        <div class="message-section">
+            <textarea class="message-input" id="message" placeholder="Enter your message"></textarea>
+            <button onclick="sendMessage()">Send Message</button>
+        </div>
 
-        <!-- Embed Section -->
         <div class="embed-section">
             <h2>Create Embed</h2>
             <input type="text" id="embedTitle" placeholder="Embed Title">
@@ -96,110 +87,58 @@
             <button onclick="sendEmbed()">Send Embed</button>
         </div>
 
-        <!-- Message Scheduling -->
-        <div class="schedule-section">
-            <h2>Schedule a Message</h2>
-            <input type="datetime-local" id="scheduleTime">
-            <button onclick="scheduleMessage()">Schedule Message</button>
-        </div>
-
-        <!-- Message Preview -->
-        <div class="preview-section">
-            <h2>Message Preview</h2>
-            <div id="messagePreview"></div>
-        </div>
-
-        <!-- History Section -->
-        <div class="history-section">
-            <h2>Message History</h2>
-            <ul id="history"></ul>
-        </div>
-
-        <!-- Statistics Section -->
-        <div class="statistics-section">
-            <h2>Webhook Usage Statistics</h2>
-            <div>Total Messages Sent: <span id="totalMessagesSent">0</span></div>
-        </div>
-
         <!-- Discord Link -->
         <a class="discord-link" href="https://discord.gg/4bE8Cbvv84" target="_blank">Join our Discord Server!</a>
     </div>
 
     <script>
-        let totalMessagesSent = 0;
-        let messageHistory = [];
-        const webhookStorageKey = "savedWebhooks";
+        let savedWebhook = null;
 
-        document.addEventListener("DOMContentLoaded", () => {
-            loadSavedWebhooks();
-            document.getElementById('message').addEventListener('input', updateMessagePreview);
-        });
-
+        // Function to save webhook
         function saveWebhook() {
             const url = document.getElementById('webhookUrl').value;
-            const webhooks = JSON.parse(localStorage.getItem(webhookStorageKey)) || [];
-            if (!webhooks.includes(url)) {
-                webhooks.push(url);
-                localStorage.setItem(webhookStorageKey, JSON.stringify(webhooks));
-                loadSavedWebhooks();
+            if (url.trim() === '') {
+                alert('Please enter a valid webhook URL.');
+                return;
             }
+
+            savedWebhook = url;
+            alert('Webhook saved successfully!');
+
+            // Show the other sections
+            document.querySelector('.message-section').style.display = 'block';
+            document.querySelector('.embed-section').style.display = 'block';
         }
 
-        function deleteWebhook() {
-            const select = document.getElementById('webhookSelect');
-            const selectedUrl = select.value;
-            const webhooks = JSON.parse(localStorage.getItem(webhookStorageKey)) || [];
-            const updatedWebhooks = webhooks.filter(url => url !== selectedUrl);
-            localStorage.setItem(webhookStorageKey, JSON.stringify(updatedWebhooks));
-            loadSavedWebhooks();
-        }
-
-        function loadSavedWebhooks() {
-            const select = document.getElementById('webhookSelect');
-            select.innerHTML = '';
-            const webhooks = JSON.parse(localStorage.getItem(webhookStorageKey)) || [];
-            webhooks.forEach(url => {
-                const option = document.createElement('option');
-                option.value = url;
-                option.text = url;
-                select.add(option);
-            });
-        }
-
+        // Function to send a message
         async function sendMessage() {
             const message = document.getElementById('message').value;
-            const url = document.getElementById('webhookSelect').value;
-            const response = await fetch(url, {
+
+            if (!savedWebhook) {
+                alert('Please save a webhook first.');
+                return;
+            }
+
+            const response = await fetch(savedWebhook, {
                 method: 'POST',
                 body: JSON.stringify({ content: message }),
                 headers: { 'Content-Type': 'application/json' }
             });
 
             if (response.ok) {
-                totalMessagesSent++;
-                updateStatistics();
-                addToHistory(message);
                 alert('Message sent successfully!');
             } else {
                 alert('Failed to send message.');
             }
         }
 
-        function scheduleMessage() {
-            const time = new Date(document.getElementById('scheduleTime').value).getTime();
-            const now = new Date().getTime();
-            const delay = time - now;
-
-            if (delay > 0) {
-                setTimeout(sendMessage, delay);
-                alert('Message scheduled!');
-            } else {
-                alert('Scheduled time must be in the future.');
-            }
-        }
-
+        // Function to send an embed
         async function sendEmbed() {
-            const url = document.getElementById('webhookSelect').value;
+            if (!savedWebhook) {
+                alert('Please save a webhook first.');
+                return;
+            }
+
             const embedData = {
                 embeds: [
                     {
@@ -210,37 +149,17 @@
                 ]
             };
 
-            const response = await fetch(url, {
+            const response = await fetch(savedWebhook, {
                 method: 'POST',
                 body: JSON.stringify(embedData),
                 headers: { 'Content-Type': 'application/json' }
             });
 
             if (response.ok) {
-                totalMessagesSent++;
-                updateStatistics();
                 alert('Embed sent successfully!');
             } else {
                 alert('Failed to send embed.');
             }
-        }
-
-        function updateMessagePreview() {
-            const message = document.getElementById('message').value;
-            const preview = document.getElementById('messagePreview');
-            preview.innerText = message;
-        }
-
-        function addToHistory(message) {
-            messageHistory.push(message);
-            const historyList = document.getElementById('history');
-            const listItem = document.createElement('li');
-            listItem.innerText = message;
-            historyList.appendChild(listItem);
-        }
-
-        function updateStatistics() {
-            document.getElementById('totalMessagesSent').innerText = totalMessagesSent;
         }
     </script>
 
